# DeepwellCup

./: .gitignore  .pre-commit-config.yaml  DeepwellCup.db  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
data/2006/: 2006 Deepwell Cup Round 2.csv
data/2007/: 2007 Deepwell Cup Round 1.csv  2007 Deepwell Cup Round 2.csv  2007 Deepwell Cup Round 3.csv
data/2008/: 2008 Deepwell Cup Round 1.csv  2008 Deepwell Cup Round 2.csv  2008 Deepwell Cup Round 4.csv
data/2009/: 2009 Deepwell Cup Other Points Round 4.csv  2009 Deepwell Cup Round 2.csv  2009 Deepwell Cup Round 3.csv  2009 Deepwell Cup Round 4.csv
data/2010/: 2010 Deepwell Cup Round 2.csv  2010 Deepwell Cup Round 3.csv
data/2011/: 2011 Deepwell Cup Round 3.csv
data/2012/: 2012 Deepwell Cup Round 1.csv  2012 Deepwell Cup Round 4.csv
data/2013/: 2013 Deepwell Cup Round 2.csv  2013 Deepwell Cup Round 3.csv
data/2014/: 2014 Deepwell Cup Round 1.csv  2014 Deepwell Cup Round 4.csv
data/2017/: 2017 Deepwell Cup Round 1.csv  2017 Deepwell Cup Round 2.csv  2017 Deepwell Cup Round 4.csv
data/2018/: 2018 Deepwell Cup Round 1.csv  2018 Deepwell Cup Round 2.csv  2018 Deepwell Cup Round 3.csv
data/2019/: 2019 Deepwell Cup Round 1.csv  2019 Deepwell Cup Round 2.csv  2019 Deepwell Cup Round 3.csv  2019 Deepwell Cup Round 4.csv
data/2020/: 2020 Deepwell Cup Round 1.csv  2020 Deepwell Cup Round 2.csv  2020 Deepwell Cup Round 3.csv  2020 Deepwell Cup Round 4.csv  2020 Deepwell Cup Round Q.csv
data/2022/: 2022 Deepwell Cup Round 1.csv  2022 Deepwell Cup Round 2.csv  2022 Deepwell Cup Round 3.csv  2022 Deepwell Cup Round 4.csv
data/2023/: 2023 Deepwell Cup Round 1 deploy.csv  2023 Deepwell Cup Round 1 raw.csv  2023 Deepwell Cup Round 1.csv  2023 Deepwell Cup Round 2.csv  2023 Deepwell Cup Round 3 raw.csv  2023 Deepwell Cup Round 3.csv  2023 Deepwell Cup Round 4 raw.csv  2023 Deepwell Cup Round 4.csv
data/archive/: import_2006.py  import_2007.py  import_2008.py  import_2009.py  import_2010.py  import_2011.py  import_2012.py  import_2013.py  import_2014.py  import_2015.py  (+1 more)
database/: DeepwellCup.db  Individuals.txt  OvertimeResults.txt  SeriesResults.txt  SeriesSelections.txt  StanleyCupResults.txt  StanleyCupSelections.txt  add_Individuals_table.sh  add_OtherPoints_table.sh  add_OvertimeResults_table.sh  add_OvertimeSelections_table.sh  add_Overtime_table.sh  add_SeriesResults_table.sh  add_SeriesSelections_table.sh  add_Series_table.sh  add_StanleyCupResults_table.sh  add_StanleyCupSelections_table.sh  add_table.sh  init_database.sh
deepcup/: __init__.py  checks.py  database.py  util.py
scripts/: __init__.py  champions_selections.py  checks.py  data_file.py  data_files.py  database.py  directories.py  dirs.py  import_archive.py  insert.py  latex.py  latex_table.py  nhl_teams.py  other_points.py  playoff_round.py  plots.py  read.py  remake.py  results.py  round_selections.py  scores.py  scoring.py  selections.py  tables.py  update.py  update_all_tables_plots.py  update_results.py  update_selections.py  utils.py
tables/: .gitignore
tests/: conftest.py  context.py  test_champions_selections.py  test_data_file.py  test_data_files.py  test_database.py  test_database_new.py  test_dirs.py  test_file_selections.py  test_files.py  test_ingestion.py  test_insert.py  test_insert_new.py  test_latex.py  test_nhl_teams.py  test_other_points.py  test_parse_files.py  test_points.py  test_process_files.py  test_read.py  test_results.py  test_round_selections.py  test_selections.py  test_selections_and_results.py  test_tables.py  test_update_selections.py  test_utils.py  utils_for_tests.py
(+241 files in other folders)
