
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepwellcup"
version = "0.0.1"
authors = [
  { name="David Deepwell", email="dsdeepwell@gmail.com" },
]
description = "Manage and analyze the Deepwell Cup"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jinja2>=3.1.2",
  "matplotlib>=3.5.1",
  "numpy>=1.22.3",
  "pandas>=1.5.2",
  "sympy>=1.11.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[project.scripts]
remake = "deepwellcup.processing.remake:main"
update_selections = "deepwellcup.processing.update_selections:main"
update_results = "deepwellcup.processing.update_results:main"

