
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepwellcup"
version = "0.1.0"
authors = [
  { name="David Deepwell", email="dsdeepwell@gmail.com" },
]
description = "Manage and analyze the Deepwell Cup"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1.2",
  "matplotlib==3.5.1",
  "numpy>=1.22.3",
  "pandas>=1.5.2",
  "sympy>=1.11.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.5",
  "pylint>=2.17",
  "pytest>=7.4",
  "flake8>=6.0",
  "pandas-stubs>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint."messages control"]
disable = ["C0103"]

[project.scripts]
initialize = "deepwellcup.processing.dirs:initialize_products_directory"
products_directory = "deepwellcup.processing.dirs:print_products_path"
remake = "deepwellcup.processing.remake:main"
update_selections = "deepwellcup.processing.update_selections:main"
update_results = "deepwellcup.processing.update_results:main"
update_standings_plot = "deepwellcup.processing.update_results:main_without_database"
series_results = "deepwellcup.processing.series_results:main"
