
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deepwellcup"
version = "0.2.0"
authors = [
  { name="David Deepwell", email="dsdeepwell@gmail.com" },
]
description = "Manage and analyze the Deepwell Cup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2==3.1.2",
  "matplotlib==3.5.1",
  "numpy==1.26.0",
  "pandas==2.1.1",
  "sympy==1.12",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project.optional-dependencies]
dev = [
  "black==23.9.1",
  "flake8==6.1.0",
  "mypy==1.5.1",
  "pandas-stubs==2.1.1.230928",
  "pre-commit==3.5.0",
  "pylint==3.0.0",
  "pytest==7.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
initialize = "deepwellcup.utils.dirs:initialize_products_directory"
products_directory = "deepwellcup.utils.dirs:print_products_path"
remake = "deepwellcup.ingest.remake:main"
update_selections = "deepwellcup.ingest.update_selections:main"
update_results = "deepwellcup.ingest.update_results:main"
series_results = "deepwellcup.utils.series_results:main"
